--- a/src/main/resources/views/index.html
+++ b/src/main/resources/views/index.html
@@ -42,7 +42,7 @@
               <li> <a href="#team">交流群</a></li>
               <li> <a href="/modules/filecoin/login.html">登录</a></li>
               <li> <a href="/modules/filecoin/regist.html">注册</a></li>
-              <li> <a href="/ipfsPdfDownLoad">挖矿教程</a></li>
+              <li> <a href="/filecoin/ipfsminer/ipfsminer.pdf">挖矿教程</a></li>
             </ul>
             <!--End Navigation Menu -->
           </nav>
